[package]
name = "time_priority_order_algoritmh"
description = "This is an algorithm create a cronogram of action sorted by time of occurrence time avoiding time colisions."
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
exclude = [
    ".gitignore",
    ".vscode/*"
]
authors = [
    "Victor Gerin de Lacerda <gerinlacerda@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/VictorGerin/time_priority_order_algoritmh"
keywords = ["time", "priority", "order", "algoritmh"]
categories = ["algorithms"]

[dependencies]
sortedlist-rs = "^0.2.3"

[dev-dependencies]
rand = "0.8.5"
chrono = "0.4.39"
